--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -2,13 +2,21 @@ KERBALCHANGELOG
 {
     showChangelog = True
     modName = Bureaucracy
-  
-    	    VERSION
+    VERSION
+    {
+        version = 1.7.0
+		change = First version under management of R-T-B.
+		change = A decoupling of random event firing from scene-switches, and instead making them based on a homeworld solar day cycle (they can happen anytime in the day other words). 
+		change = To make settings feel more consistent behavior wise, the default value of RandomEventChance has been halved.  Previous saves will also see this value autohalved.
+		change = A fix for the old githubs issue #26, crew report does not show retired Kerbals
+		change = A fix for the bug that causes new contracts to be generated with fund rewards after save/loading without fully exiting the game application. 
+    }  
+    VERSION
     {
         version = 1.6.1
 		change = Fixed Budget Allocations not persisting between scene changes
     }  
-  	    VERSION
+  	VERSION
     {
         version = 1.6
 		change = Bureaucracy will now yield control of the science system back to Kerbalism when not running in a Career game.
@@ -18,13 +26,13 @@ KERBALCHANGELOG
 		change = Barring any major issues being found this will be the last release of Bureaucracy. I'd like to thank you all for your support over the last 7 years.
     }  
   
-	    VERSION
+	VERSION
     {
         version = 1.5.1
 		change = Fixed an issue where the Next Budget Alarm would add the current UT to the alarm time.
     }  
 	
-	    VERSION
+	VERSION
     {
         version = 1.5
 		change = Recompile against KSP 1.12.2 - not compatible with 1.11.x or earlier.
