--- a/GameData/Bureaucracy/BureaucracyCBK.cfg
+++ b/GameData/Bureaucracy/BureaucracyCBK.cfg
@@ -20,7 +20,7 @@
     {
         @levels = 5
         @upgradesVisual = 1, 1, 2, 2, 3
-        @craftLimitMass = 18, 36, 72, 144, -1
+        @craftMassLimit = 18, 36, 72, 144, -1
         @upgrades = 19000, 38000, 76000, 152000, 304000
         @craftSizeLimit
         {
@@ -36,7 +36,7 @@
     {
         @levels = 5
         @upgradesVisual = 1, 1, 2, 2, 3
-        @craftLimitMass = 18, 36, 72, 144, -1
+        @craftMassLimit = 18, 36, 72, 144, -1
         @upgrades = 19000, 38000, 76000, 152000, 304000
         @craftSizeLimit
         {
