--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,46 +4,51 @@ KERBALCHANGELOG
     modName = Bureaucracy
     VERSION
     {
+        version = 1.7.1
+	change = Hotfix for CustomBarnKit Config file mistakes.
+    }
+    VERSION
+    {
         version = 1.7.0
-		change = First version under management of R-T-B.
-		change = A decoupling of random event firing from scene-switches, and instead making them based on a homeworld solar day cycle (they can happen anytime in the day other words). 
-		change = To make settings feel more consistent behavior wise, the default value of RandomEventChance has been halved.  Previous saves will also see this value autohalved.
-		change = A fix for the old githubs issue #26, crew report does not show retired Kerbals
-		change = A fix for the bug that causes new contracts to be generated with fund rewards after save/loading without fully exiting the game application. 
+	change = First version under management of R-T-B.
+	change = A decoupling of random event firing from scene-switches, and instead making them based on a homeworld solar day cycle (they can happen anytime in the day other words). 
+	change = To make settings feel more consistent behavior wise, the default value of RandomEventChance has been halved.  Previous saves will also see this value autohalved.
+	change = A fix for the old githubs issue #26, crew report does not show retired Kerbals
+	change = A fix for the bug that causes new contracts to be generated with fund rewards after save/loading without fully exiting the game application. 
     }  
     VERSION
     {
-        version = 1.6.1
-		change = Fixed Budget Allocations not persisting between scene changes
+    	version = 1.6.1
+    	change = Fixed Budget Allocations not persisting between scene changes
     }  
-  	VERSION
+    VERSION
     {
         version = 1.6
-		change = Bureaucracy will now yield control of the science system back to Kerbalism when not running in a Career game.
-		change = Fixed an issue where Bureaucracy would incorrectly believe the time to be Y1D1 the first time it is used in a save, even if it was an existing save.
-		change = Added setting to turn off Messages (SuppressMessages) (bool).
-		change = Settings version updated to 1.6. Previous version 1.4.0.1 - upgrading from a version of Bureaucracy prior to 1.4.0.1 will result in settings being reset to defaults.
-		change = Barring any major issues being found this will be the last release of Bureaucracy. I'd like to thank you all for your support over the last 7 years.
+	change = Bureaucracy will now yield control of the science system back to Kerbalism when not running in a Career game.
+	change = Fixed an issue where Bureaucracy would incorrectly believe the time to be Y1D1 the first time it is used in a save, even if it was an existing save.
+	change = Added setting to turn off Messages (SuppressMessages) (bool).
+	change = Settings version updated to 1.6. Previous version 1.4.0.1 - upgrading from a version of Bureaucracy prior to 1.4.0.1 will result in settings being reset to defaults.
+	change = Barring any major issues being found this will be the last release of Bureaucracy. I'd like to thank you all for your support over the last 7 years.
     }  
   
-	VERSION
+    VERSION
     {
         version = 1.5.1
-		change = Fixed an issue where the Next Budget Alarm would add the current UT to the alarm time.
+	change = Fixed an issue where the Next Budget Alarm would add the current UT to the alarm time.
     }  
 	
-	VERSION
+    VERSION
     {
-        version = 1.5
-		change = Recompile against KSP 1.12.2 - not compatible with 1.11.x or earlier.
-		change = Add support for OPM in the CBK config (thanks Gordon-Dry)
+	version = 1.5
+	change = Recompile against KSP 1.12.2 - not compatible with 1.11.x or earlier.
+	change = Add support for OPM in the CBK config (thanks Gordon-Dry)
         change = Alarms are now handled by the stock Alarm Clock (thanks R-T-B).
-		change = Added "Bank of Kerbin" script. You can now store and withdraw funds (no auto-allocation right now, that will come later).
-		change = UI now properly scrolls - this indirectly fixes the issue where the Crew Training dialog would go off screen.
-		change = Retirement dates will no longer be saved if Retirement is disabled.
-		change = Retirement dates will now correctly regenerate if Retirement is re-enabled after being disabled.
-		change = Mod will add an alarm for when Kerbals are going to be done training.
-		change = Mod will now intelligently identify if the KCT warning should be shown.
+	change = Added "Bank of Kerbin" script. You can now store and withdraw funds (no auto-allocation right now, that will come later).
+	change = UI now properly scrolls - this indirectly fixes the issue where the Crew Training dialog would go off screen.
+	change = Retirement dates will no longer be saved if Retirement is disabled.
+	change = Retirement dates will now correctly regenerate if Retirement is re-enabled after being disabled.
+	change = Mod will add an alarm for when Kerbals are going to be done training.
+	change = Mod will now intelligently identify if the KCT warning should be shown.
     }
     VERSION
     {
