Temporary removal of Bank of Kerbin and other backlogged commits.

--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -2,6 +2,15 @@ KERBALCHANGELOG
 {
     showChangelog = True
     modName = Bureaucracy
+	VERSION
+    {
+        version = 1.7.2
+	change = Hotfix for OPM CustomBarnKit Config file mistakes.
+	change = UI fixes and support for ZTheme.
+	change = Timewarp now stops on events.
+	change = Month zero budget is now generated on new games, instead of being empty.
+	change = Remove bank of Kerbin pending further, less exploity gameplay changes to the core functionality.
+    }
     VERSION
     {
         version = 1.7.1
