--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,6 +4,16 @@ KERBALCHANGELOG
     modName = Bureaucracy
 	VERSION
     {
+        version = 1.7.3
+	change = Hotfix for a bug that could zero newgame budgets.
+	change = More UI improvements courtesy Github user AlexSkylark.
+	change = Numerous display text improvements to be less confusing for the end user.
+	change = Level 1 facilities are now 2/3rds of base maintanence cost to help with early game.
+	change = LaunchCosts are now displayed properly.
+	change = UseItorLoseIt is now default off.
+    }
+	VERSION
+    {
         version = 1.7.2
 	change = Hotfix for OPM CustomBarnKit Config file mistakes.
 	change = UI fixes and support for ZTheme.
