--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,6 +4,14 @@ KERBALCHANGELOG
     modName = Bureaucracy
 	VERSION
     {
+        version = 1.7.4
+	change = Kerbals now stay in roster when retired, going to a "dead / missing / retired" pane.  There have been some localization changes to make this more obvious, they are english only for now but I am open to PRs for more languages.
+	change = The above change works great with stuff like Final Frontier, where before you would lose your badges, now they will stay (it will show the kerbals as dead but you know better).
+	change = Retirees are furthermore now processed on the day of their retirement, not the next budget cycle.
+	change = Bank of Kerbin code is now completely removed.  You may lose your bank balance if you were expecting it to come back, but I really don't feel it fits so if you want it, maybe stay on an older release.  I don't plan on reintroducing it anytime soon.
+    }
+	VERSION
+    {
         version = 1.7.3
 	change = Hotfix for a bug that could zero newgame budgets.
 	change = More UI improvements courtesy Github user AlexSkylark.
