--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,6 +4,11 @@ KERBALCHANGELOG
     modName = Bureaucracy
 	VERSION
     {
+        version = 1.7.5
+	change = Hotfix for broken localization patch in 1.7.4.
+    }
+	VERSION
+    {
         version = 1.7.4
 	change = Kerbals now stay in roster when retired, going to a "dead / missing / retired" pane.  There have been some localization changes to make this more obvious, they are english only for now but I am open to PRs for more languages.
 	change = The above change works great with stuff like Final Frontier, where before you would lose your badges, now they will stay (it will show the kerbals as dead but you know better).
