--- a/GameData/Bureaucracy/Patches/LocalizationPatch.cfg
+++ b/GameData/Bureaucracy/Patches/LocalizationPatch.cfg
@@ -1,6 +1,9 @@
-@Localization/en-us.cfg:HAS[@*]
+﻿Localization
 {
-	@autoLOC_445546 = Gone but not forgotten...
-	@autoLOC_445551 = Gone but not forgotten...
-	@autoLOC_445665 = Lost or Retired [<<1>><<2[ Missing or Retired/]>>]
+	en-us
+	{
+	#autoLOC_445546 = Gone but not forgotten...
+	#autoLOC_445551 = Gone but not forgotten...
+	#autoLOC_445665 = Lost or Retired [<<1>><<2[ Missing or Retired/]>>]
+	}
 }
