Support for Contract Configurator contracts

--- a/Bureaucracy/Bureaucracy.csproj
+++ b/Bureaucracy/Bureaucracy.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -84,6 +84,7 @@
     <Compile Include="Budget\Costs.cs" />
     <Compile Include="Budget\RepDecay.cs" />
     <Compile Include="Bureaucracy.cs" />
+    <Compile Include="ContractConfiguratorBridge.cs" />
     <Compile Include="ContractInterceptor.cs" />
     <Compile Include="Crew\AstronautComplexOverride.cs" />
     <Compile Include="Crew\CrewManager.cs" />
