--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -2,6 +2,11 @@ KERBALCHANGELOG
 {
     showChangelog = True
     modName = Bureaucracy
+		VERSION
+    {
+        version = 1.7.6
+	change = Hotfix for some slight exception issues in the game initiationilization logic (thanks @AlexSkylark)
+    }
 	VERSION
     {
         version = 1.7.5
