--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -2,7 +2,13 @@ KERBALCHANGELOG
 {
     showChangelog = True
     modName = Bureaucracy
-		VERSION
+	VERSION
+    {
+        version = 1.7.7
+	change = Added a feature for cost adjustment of parts unlock cost (thanks @AlexSkylark)
+	change = The above depends on having at least a small basis of stock parts to work (in particular we reference the base price of the "Aerodynamic nose cone"), if you are using a "complete parts replacement" pack that wipes out stock parts you may find you are not be able to adjust unlock prices.  Restock and Restock+ are fine, though.
+    }
+	VERSION
     {
         version = 1.7.6
 	change = Hotfix for some slight exception issues in the game initiationilization logic (thanks @AlexSkylark)
