--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,6 +4,11 @@ KERBALCHANGELOG
     modName = Bureaucracy
 	VERSION
     {
+        version = 1.7.8
+	change = Hotfix for retirement being force enabled, sorry about that!
+    }
+	VERSION
+    {
         version = 1.7.7
 	change = Added a feature for cost adjustment of parts unlock cost (thanks @AlexSkylark)
 	change = The above depends on having at least a small basis of stock parts to work (in particular we reference the base price of the "Aerodynamic nose cone"), if you are using a "complete parts replacement" pack that wipes out stock parts you may find you are not be able to adjust unlock prices.  Restock and Restock+ are fine, though.
