--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,6 +4,11 @@ KERBALCHANGELOG
     modName = Bureaucracy
 	VERSION
     {
+        version = 1.7.9
+	change = Fix for a (somewhat common) nullref that may make retiring kerbals go unpaid for that months work!
+    }
+	VERSION
+    {
         version = 1.7.8
 	change = Hotfix for retirement being force enabled, sorry about that!
     }
