--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -1,14 +1,18 @@
 KERBALCHANGELOG
 {
     showChangelog = True
-	    modName = Bureaucracy
+	modName = Bureaucracy
+	VERSION
+    {
+        version = 1.8.1
+	change = Fix for a calculation bug in one (and only one) of the GUI windows.
+    }
 	VERSION
     {
         version = 1.8.0
 	change = Complete support for calculation of strategy costs in monthly budget reports and predictions.  This took a lot of work, believe it or not, and is enough for a major feature update on it's own.
 	change = In addition to that, we have made monthly budget projections way more acurate.  They seldom miss a beat by even a few dollars now (as long as you don't change your plans majorly, anyhow).
     }
-    modName = Bureaucracy
 	VERSION
     {
         version = 1.7.9
