--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,6 +4,11 @@ KERBALCHANGELOG
 	modName = Bureaucracy
 	VERSION
     {
+        version = 1.8.2
+	change = Fix for a calculation bug that sometimes would (only visually) zero crew bonuses in certain report sections of the GUI.
+    }
+	VERSION
+    {
         version = 1.8.1
 	change = Fix for a calculation bug in one (and only one) of the GUI windows.
     }
