--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,6 +4,11 @@ KERBALCHANGELOG
 	modName = Bureaucracy
 	VERSION
     {
+        version = 1.8.3
+	change = Fix for the same calculation bug, only in a different spot in the GUI.  That should be the last hotfix hopefully...
+    }
+	VERSION
+    {
         version = 1.8.2
 	change = Fix for a calculation bug that sometimes would (only visually) zero crew bonuses in certain report sections of the GUI.
     }
