--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -2,6 +2,11 @@ KERBALCHANGELOG
 {
     showChangelog = True
 	modName = Bureaucracy
+		VERSION
+    {
+        version = 1.8.3
+	change = Fix for one minor math bug that I left in there...
+    }
 	VERSION
     {
         version = 1.8.3
