--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -2,9 +2,14 @@ KERBALCHANGELOG
 {
     showChangelog = True
 	modName = Bureaucracy
+			VERSION
+    {
+        version = 1.8.5
+	change = Fix for the crew bonus payout still not reporting...  Sorry for the rapidfire releases, that should really be it.
+    }
 		VERSION
     {
-        version = 1.8.3
+        version = 1.8.4
 	change = Fix for one minor math bug that I left in there...
     }
 	VERSION
