--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -2,6 +2,11 @@ KERBALCHANGELOG
 {
     showChangelog = True
 	modName = Bureaucracy
+		VERSION
+    {
+        version = 1.8.6
+	change = Fix for the minor descrepancy between the income amounts budget and overview windows,  All windows should finally be acurate as promised.
+    }
 			VERSION
     {
         version = 1.8.5
