--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,6 +4,11 @@ KERBALCHANGELOG
 	modName = Bureaucracy
 		VERSION
     {
+        version = 1.8.7
+	change = Changed some GUI labels to be more understandable.
+    }
+		VERSION
+    {
         version = 1.8.6
 	change = Fix for the minor descrepancy between the income amounts budget and overview windows,  All windows should finally be acurate as promised.
     }
