--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -4,6 +4,11 @@ KERBALCHANGELOG
 	modName = Bureaucracy
 		VERSION
     {
+        version = 1.8.8
+	change = Fix for a typo.  This is it for a while, honest.
+    }
+		VERSION
+    {
         version = 1.8.7
 	change = Changed some GUI labels to be more understandable.
     }
