--- a/GameData/Bureaucracy/Changelog.cfg
+++ b/GameData/Bureaucracy/Changelog.cfg
@@ -2,27 +2,33 @@ KERBALCHANGELOG
 {
     showChangelog = True
 	modName = Bureaucracy
-		VERSION
+	VERSION
+    {
+        version = 1.8.9
+	change = Update GUI window automatically rather than requiring a reopen when budget is changed.
+
+    }
+	VERSION
     {
         version = 1.8.8
 	change = Fix for a typo.  This is it for a while, honest.
     }
-		VERSION
+	VERSION
     {
         version = 1.8.7
 	change = Changed some GUI labels to be more understandable.
     }
-		VERSION
+	VERSION
     {
         version = 1.8.6
 	change = Fix for the minor descrepancy between the income amounts budget and overview windows,  All windows should finally be acurate as promised.
     }
-			VERSION
+	VERSION
     {
         version = 1.8.5
 	change = Fix for the crew bonus payout still not reporting...  Sorry for the rapidfire releases, that should really be it.
     }
-		VERSION
+	VERSION
     {
         version = 1.8.4
 	change = Fix for one minor math bug that I left in there...
